--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -24,3 +24,13 @@ body {
     line-height: 160%;
     background-color: var(--bg-primary);
 }
+
+@layer base {
+    input[type='number']::-webkit-outer-spin-button,
+    input[type='number']::-webkit-inner-spin-button,
+    input[type='number'] {
+        -webkit-appearance: none;
+        margin: 0;
+        -moz-appearance: textfield !important;
+    }
+}
